# wjr

./: .clang-format  .coveralls.yml  .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  Doxyfile  LICENSE  Makefile  README.md  cmake_install.cmake  input.cpp  main.cpp  wjr  源.cpp
.github/: lsan_suppressions.txt
.github/workflows/: codeql.yml  linux-arm.yml  linux.yml  main.yml  windows.yml
benchmarks/: CMakeLists.txt
benchmarks/src/: biginteger.cpp  btree.cpp  detail.hpp  main.cpp  math.cpp  memory.cpp
cmake/: AddFlags.cmake  wjrConfig.cmake.in  wjrHelpers.cmake
doxygen/: index.html
doxygen/html/: algorithm_8hpp.html  algorithm_8hpp.js  algorithm_8hpp_source.html  align_8hpp.html  align_8hpp.js  align_8hpp_source.html  aligned__alloc_8hpp.html  aligned__alloc_8hpp.js  aligned__alloc_8hpp_source.html  aligned__alloc__android_8hpp.html  aligned__alloc__android_8hpp.js  aligned__alloc__android_8hpp_source.html  aligned__alloc__macos_8hpp.html  aligned__alloc__macos_8hpp.js  aligned__alloc__macos_8hpp_source.html  aligned__alloc__malloc_8hpp.html  aligned__alloc__malloc_8hpp.js  aligned__alloc__malloc_8hpp_source.html  aligned__alloc__mingw_8hpp.html  aligned__alloc__mingw_8hpp.js  aligned__alloc__mingw_8hpp_source.html  aligned__alloc__msvc_8hpp.html  aligned__alloc__msvc_8hpp.js  aligned__alloc__msvc_8hpp_source.html  aligned__alloc__posix_8hpp.html  aligned__alloc__posix_8hpp.js  aligned__alloc__posix_8hpp_source.html  aligned__alloc__sunos_8hpp.html  aligned__alloc__sunos_8hpp.js  aligned__alloc__sunos_8hpp_source.html  allocate__at__least_8hpp.html  allocate__at__least_8hpp.js  allocate__at__least_8hpp_source.html  annotated.html  annotated_dup.js  arch_2generic_2math_2bignum-config_8hpp.html  arch_2generic_2math_2bignum-config_8hpp_source.html  arch_2x86_2biginteger_2detail_2add_8hpp.html  arch_2x86_2biginteger_2detail_2add_8hpp_source.html  arch_2x86_2biginteger_2detail_2div_8hpp.html  (+5061 more)
doxygen/latex/: algorithm_8hpp.tex  algorithm_8hpp_source.tex  align_8hpp.tex  align_8hpp_source.tex  aligned__alloc_8hpp.tex  aligned__alloc_8hpp_source.tex  aligned__alloc__android_8hpp.tex  aligned__alloc__android_8hpp_source.tex  aligned__alloc__macos_8hpp.tex  aligned__alloc__macos_8hpp_source.tex  aligned__alloc__malloc_8hpp.tex  aligned__alloc__malloc_8hpp_source.tex  aligned__alloc__mingw_8hpp.tex  aligned__alloc__mingw_8hpp_source.tex  aligned__alloc__msvc_8hpp.tex  aligned__alloc__msvc_8hpp_source.tex  aligned__alloc__posix_8hpp.tex  aligned__alloc__posix_8hpp_source.tex  aligned__alloc__sunos_8hpp.tex  aligned__alloc__sunos_8hpp_source.tex  allocate__at__least_8hpp.tex  allocate__at__least_8hpp_source.tex  annotated.tex  arch_2generic_2math_2bignum-config_8hpp.tex  arch_2generic_2math_2bignum-config_8hpp_source.tex  arch_2x86_2biginteger_2detail_2add_8hpp.tex  arch_2x86_2biginteger_2detail_2add_8hpp_source.tex  arch_2x86_2biginteger_2detail_2div_8hpp.tex  (+1842 more)
examples/calc/: CMakeLists.txt  calc.cpp  calc.l  calc.sh  calc.tab.h  calc.y  flexer.hpp
examples/demo/: CMakeLists.txt
examples/demo/data/: new.json
examples/demo/src/: main.cpp  simdjson.cpp
godbolt/: wjr.h  wjr.hpp
include/: String.h  action.h  biginteger - 副本 (2).h  biginteger - 副本.h  biginteger.h  deflate.h  exist_ptr.h  generateFile.h  graphic.h  huffman.h  json - 副本.h  json.h  libdivide.h  mString.h  mallocator.h  masm.h  mtag.h  mtool.h  mtype_traits.h  mySTL.h  string_helper.h  thread_pool.h  typeInfo.h
src/: String.h  deflate.cpp  fftsg.c  fftsg_h.c  grisu2b_59_56.c  huffman.cpp  json.cpp  main.cpp  mallocator.cpp  mallocator.h  mtool.cpp  mtool.h  mySTL.cpp  mySTL.h  string_helper.cpp  string_helper.h  string_tool.cpp  string_tool.h  test.cpp  thread_pool.h  typeInfo.h
src/arch/: CMakeLists.txt
src/arch/x86/: CMakeLists.txt  cpuinfo.cpp
src/arch/x86/biginteger/: CMakeLists.txt
src/arch/x86/biginteger/detail/: addmul_1.asm  addsub_n.asm  gen_addrsblsh_n.hpp  mul.cpp
src/arch/x86/format/utf8/: utf8.cpp
src/arch/x86/json/: lexer.cpp
src/arch/x86/math/: large-compare-impl.cpp  large-find-impl.cpp  set.cpp  shift.cpp
src/biginteger/: CMakeLists.txt  biginteger - 副本 (2).h  biginteger - 副本 (3).h  biginteger - 副本 (4).h  biginteger - 副本.h  biginteger.cpp  biginteger.h
src/biginteger/detail/: convert.cpp  div.cpp  fft.cpp  gmp-helper.hpp  high-toom.cpp  mul-helper.hpp  mul.cpp  nussbaumer_mul.cpp  pow.cpp
src/json/: json.h  (+5 more)
src/utility/: CMakeLists.txt  assert.cpp
test/: CMakeLists.txt  biginteger.cpp  detail.hpp  expected.cpp  math.cpp  optional.cpp  spanstream.cpp
test/benchmarks/tools/: compare.py
test/biginteger/: biginteger.cpp  expression.cpp
test/container/: bitset.cpp  btree_map.cpp  list.cpp  ring_buffer.cpp  vector.cpp
test/format/: fastfloat.cpp
test/json/: json.cpp
test/math/: count_digits.cpp
test/memory/: memory.cpp  uninitialized.cpp
test/preprocessor/: preprocessor.cpp
test/units/: CMakeLists.txt
test/units/src/: optional.cpp
test/units/src/json/: json.cpp
test/units/src/memory/: memory.cpp
test/units/src/preprocessor/: preprocessor.cpp
test/units/src/utility/: tuple.cpp
test/utility/: compressed_pair.cpp  functional.cpp  tuple.cpp
tests/: CMakeLists.txt
tests/benchmarks/: 2024.05.27.json  2025.04.03.json  CMakeLists.txt  compare.txt  fallback.json  new.json  old.2024.5.json
tests/benchmarks/src/: bench_algo.cpp  bench_vector.cpp  benchmarks.cpp  biginteger.cpp  container.cpp  detail.hpp  details.hpp  main.cpp  math.cpp  memory.cpp
tests/benchmarks/tools/: CMakeLists.txt  compare.cpp  compare.py
tests/src/: main.cpp  unit_algo.cpp  unit_vector.cpp
tests/units/: CMakeLists.txt  CMakeSettings.json
tests/units/src/: biginteger.cpp  bitset.cpp  btree.cpp  btree_map.cpp  compressed_pair.cpp  container.cpp  details.hpp  expected.cpp  fastfloat.cpp  json.cpp  main.cpp  math.cpp  memory.cpp  optional.cpp  preprocessor.cpp  random.hpp  tuple.cpp  type.hpp  unit_algo.cpp  unit_vector.cpp  vector.cpp
tests/units/src/container/: forward_list.cpp
tests/units/src/memory/: uninitialized.cpp
tests/units/src/utility/: functional.cpp
(+873 files in other folders)
